<resources>
    <string name="app_name">BodyFatCalculatorPro</string>
    <string name="bodyfatcalculatorpro">BodyFatCalculatorPro</string>
    <string name="home_page">Home Page</string>
    <string name="buttonBasic">Basic Body Fat Calculator</string>
    <string name="body_fat_calculator">Body Fat Calculator</string>
    <string name="gender">Gender</string>
    <string name="male">Male</string>
    <string name="female">Female</string>
    <string name="age">Age</string>
    <string name="enter_your_age">Enter your age</string>
    <string name="weight">Weight</string>
    <string name="weight_in_kgs">Weight in kgs</string>
    <string name="height">Height</string>
    <string name="height_in_cm">Height in cm</string>
    <string name="calculate">Calculate</string>
    <string name="reset">Reset</string>
    <string name="result">Result: </string>
    <string name="bodyfatnormstable">bodyFatNormsTable</string>
    <string name="neck">Neck</string>
    <string name="hip_circumference">Hip circumference</string>
    <string name="waist">Waist</string>
    <string name="hip">Hip</string>
    <string name="neck_circumference">Neck circumference</string>
    <string name="waist_circumference">Waist circumference</string>
    <string name="calculate_add">Calculate + add</string>
    <string name="view">View</string>
</resources>